Integrate the central to the search

--- a/flow-model-generator/modules/flow-model-generator-core/build.gradle
+++ b/flow-model-generator/modules/flow-model-generator-core/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     implementation project(":langserver-core")
     implementation project(":langserver-commons")
     implementation project(":diagram-util")
+    implementation project(":flow-model-generator:flow-model-central-client")
 
 
     implementation "org.ballerinalang:ballerina-lang:${ballerinaLangVersion}"
