--- a/gradle.properties
+++ b/gradle.properties
@@ -56,7 +56,7 @@ stdlibUuidVersion=1.10.0-20250311-135800-d38a5b5
 # Stdlib Level 04
 stdlibAuthVersion=2.14.0-20250311-141100-33e5fab
 stdlibOAuth2Version=2.14.0-20250311-141600-1d12813
-stdlibJsonDataVersion=1.1.0-20250305-182300-23e3c81
+stdlibJsonDataVersion=1.1.1
 
 # Stdlib Level 05
 stdlibHttpVersion=2.14.3
