Add APIs related to dataloaders and chunkers

--- a/gradle.properties
+++ b/gradle.properties
@@ -88,3 +88,4 @@ ballerinaxGithubTriggerVersion = 0.10.0
 ballerinaxPostgresqlVersion = 1.15.0
 ballerinaxPostgresqlDriverVersion = 1.6.1
 ballerinaxAiPineconeVersion = 1.0.1
+ballerinaxAiDevantVersion = 1.0.0
