Add bal tool pulling task

--- a/gradle.properties
+++ b/gradle.properties
@@ -90,3 +90,6 @@ ballerinaxPostgresqlDriverVersion = 1.6.1
 ballerinaxAiPineconeVersion = 1.0.1
 ballerinaxAiDevantVersion = 1.0.0
 ballerinaAiVersion = 1.5.0
+
+# Ballerina tool versions
+migrateTibcoVersion=1.2.10
