--- a/gradle.properties
+++ b/gradle.properties
@@ -89,3 +89,4 @@ ballerinaxPostgresqlVersion = 1.15.0
 ballerinaxPostgresqlDriverVersion = 1.6.1
 ballerinaxAiPineconeVersion = 1.0.1
 ballerinaxAiDevantVersion = 1.0.0
+ballerinaAiVersion = 1.5.0
