--- a/flow-model-generator/modules/flow-model-generator-ls-extension/build.gradle
+++ b/flow-model-generator/modules/flow-model-generator-ls-extension/build.gradle
@@ -113,7 +113,7 @@ test.dependsOn rootProject.pullBallerinaModule('mysql', ballerinaxMysqlVersion)
 test.dependsOn rootProject.pullBallerinaModule('wso2.controlplane', ballerinaxWso2ControlplaneVersion)
 test.dependsOn rootProject.pullBallerinaModule('ai.pinecone', ballerinaxAiPineconeVersion)
 test.dependsOn rootProject.pullBallerinaModule('ai.devant', ballerinaxAiDevantVersion)
-test.dependsOn rootProject.pullBallerinaModule('ai', ballerinaAiVersion)
+test.dependsOn rootProject.pullBallerinaModule('ai', ballerinaAiVersion, 'ballerina')
 
 
 
