--- a/flow-model-generator/modules/flow-model-generator-ls-extension/build.gradle
+++ b/flow-model-generator/modules/flow-model-generator-ls-extension/build.gradle
@@ -111,8 +111,15 @@ test.dependsOn rootProject.pullBallerinaModule('snowflake', ballerinaxSnowflakeV
 test.dependsOn rootProject.pullBallerinaModule('docusign.dsadmin', ballerinaxDocusignDsadminVersion)
 test.dependsOn rootProject.pullBallerinaModule('mysql', ballerinaxMysqlVersion)
 test.dependsOn rootProject.pullBallerinaModule('wso2.controlplane', ballerinaxWso2ControlplaneVersion)
+
 test.dependsOn rootProject.pullBallerinaModule('ai.pinecone', ballerinaxAiPineconeVersion)
 test.dependsOn rootProject.pullBallerinaModule('ai.devant', ballerinaxAiDevantVersion)
+test.dependsOn rootProject.pullBallerinaModule('ai.openai', ballerinaxAiOpenaiVersion)
+test.dependsOn rootProject.pullBallerinaModule('ai.ollama', ballerinaxAiOllamaVersion)
+test.dependsOn rootProject.pullBallerinaModule('ai.azure', ballerinaxAiAzureVersion)
+test.dependsOn rootProject.pullBallerinaModule('ai.anthropic', ballerinaxAiAnthropicVersion)
+test.dependsOn rootProject.pullBallerinaModule('ai.deepseek', ballerinaxAiDeepseekVersion)
+test.dependsOn rootProject.pullBallerinaModule('ai.mistral', ballerinaxAiMistralVersion)
 test.dependsOn rootProject.pullBallerinaModule('ai', ballerinaAiVersion, "ballerina")
 
 
