--- a/gradle.properties
+++ b/gradle.properties
@@ -90,6 +90,12 @@ ballerinaxPostgresqlDriverVersion = 1.6.1
 ballerinaxAiPineconeVersion = 1.1.0
 ballerinaxAiDevantVersion = 1.0.0
 ballerinaAiVersion = 1.5.0
+ballerinaxAiOpenaiVersion = 1.1.0
+ballerinaxAiOllamaVersion = 1.0.1
+ballerinaxAiAzureVersion = 1.0.1
+ballerinaxAiAnthropicVersion = 1.0.1
+ballerinaxAiDeepseekVersion = 1.0.1
+ballerinaxAiMistralVersion = 1.0.1
 
 # Ballerina tool versions
 migrateTibcoVersion=1.2.10
