--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -3,41 +3,37 @@ name: Trivy
 on:
   workflow_dispatch:
   schedule:
-    - cron: '30 20 * * *'
+    - cron: "30 20 * * *"
 
 jobs:
   ubuntu-build:
     name: Build on Ubuntu
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - name: Set up JDK 17
-        uses: actions/setup-java@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Set up JDK 21
+        uses: actions/setup-java@v3
         with:
-          distribution: 'temurin'
-          java-version: 17
+          distribution: "temurin"
+          java-version: 21.0.3
+
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
+
       - name: Generate SBOM
         env:
           packageUser: ${{ github.actor }}
           packagePAT: ${{ secrets.GITHUB_TOKEN }}
         run: ./gradlew cyclonedxBom
+
       - name: Run Trivy vulnerability scanner on SBOM
         uses: aquasecurity/trivy-action@master
         with:
-          scan-type: 'sbom'
-          scan-ref: 'build/sbom.json'
-          format: 'table'
-          timeout: '10m0s'
-          exit-code: '1'
-          severity: 'CRITICAL,HIGH'
-      - name: Run Trivy vulnerability scanner on repository
-        uses: aquasecurity/trivy-action@master
-        with:
-          scan-type: 'fs'
-          scan-ref: '.'
-          format: 'table'
-          timeout: '10m0s'
-          exit-code: '1'
-          severity: 'CRITICAL,HIGH'
+          scan-type: "sbom"
+          scan-ref: "build/sbom.json"
+          format: "table"
+          timeout: "10m0s"
+          exit-code: "1"
+          severity: "CRITICAL,HIGH"
