Update CycloneDX BOM plugin version

--- a/gradle.properties
+++ b/gradle.properties
@@ -13,6 +13,7 @@ puppycrawlCheckstyleVersion=10.12.1
 releasePluginVersion=2.8.0
 shadowJarPluginVersion=8.1.1
 spotbugsPluginVersion=6.0.18
+cyclonedxBomPluginVersion=1.8.2
 testngVersion=7.7.0
 graphqlJavaVersion=21.5
 sqliteJdbcVersion=3.41.2.2
