--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,7 @@ plugins {
     id "com.github.johnrengelman.shadow" version "${shadowJarPluginVersion}"
     id "de.undercouch.download" version "${downloadPluginVersion}"
     id "net.researchgate.release" version "${releasePluginVersion}"
-    id "org.cyclonedx.bom" version "1.8.2"
+    id "org.cyclonedx.bom" version "${cyclonedxBomPluginVersion}"
     id "java"
 }
 apply plugin: 'maven-publish'
