--- a/gradle.properties
+++ b/gradle.properties
@@ -19,6 +19,7 @@ sqliteJdbcVersion=3.41.2.2
 jakartaPersistenceVersion=3.1.0
 swaggerParserVersion=2.1.22
 openAPICoreVersion=2.3.1
+ballerinaToOpenApiVersion=2.4.0-20250919-140501-d1259e5
 mockitoVersion=5.14.0
 jacksonDatabindVersion=2.15.3
 jacksonDataformatYamlVersion=2.15.3
