--- a/settings.gradle
+++ b/settings.gradle
@@ -36,6 +36,7 @@ include(':flow-model-generator:flow-model-central-client')
 include(':service-model-generator:service-model-generator-ls-extension')
 include(':service-model-generator:service-model-index-generator')
 include(':test-manager-service:test-manager-service-ls-extension')
+include(':openapi-service:openapi-service-ls-extension')
 include(":langserver-commons")
 include(":langserver-core")
 include(":langserver-stdlib")
@@ -58,6 +59,7 @@ project(':flow-model-generator:flow-model-central-client').projectDir = file('fl
 project(':service-model-generator:service-model-generator-ls-extension').projectDir = file('service-model-generator/modules/service-model-generator-ls-extension')
 project(':service-model-generator:service-model-index-generator').projectDir = file('service-model-generator/modules/service-model-index-generator')
 project(':test-manager-service:test-manager-service-ls-extension').projectDir = file('test-manager-service/modules/test-manager-service-ls-extension')
+project(':openapi-service:openapi-service-ls-extension').projectDir = file('openapi-service/modules/openapi-service-ls-extension')
 project(":langserver-commons").projectDir = file("langserver-commons")
 project(":langserver-core").projectDir = file("langserver-core")
 project(":langserver-stdlib").projectDir = file("langserver-stdlib")
@@ -70,3 +72,4 @@ gradleEnterprise {
         termsOfServiceAgree = 'yes'
     }
 }
+
