--- a/gradle.properties
+++ b/gradle.properties
@@ -50,7 +50,7 @@ stdlibCryptoVersion=2.9.0-20250311-133400-9758410
 stdlibLogVersion=2.13.0
 stdlibOsVersion=1.10.0-20250311-133500-7cc80f4
 stdlibRandomVersion=1.7.0-20250311-134500-6be5f1c
-stdlibTcpVersion=1.13.0-20250311-141600-fdbda98
+stdlibTcpVersion=1.13.2
 
 # Stdlib Level 03
 stdlibUuidVersion=1.10.0-20250311-135800-d38a5b5
@@ -81,8 +81,8 @@ ballerinaxSnowflakeVersion=2.2.0
 ballerinaxDocusignDsadminVersion=2.0.0
 ballerinaxMysqlVersion=1.16.1
 ballerinaxWso2ControlplaneVersion=1.0.0
-ballerinaxKafkaVersion=4.5.0
-ballerinaxRabbitmqVersion=3.2.0
+ballerinaxKafkaVersion=4.6.1
+ballerinaxRabbitmqVersion=3.3.0
 ballerinaxAiAgent=1.0.1
 ballerinaxNp=0.8.1
 ballerinaxGithubTriggerVersion = 0.10.0
