Add OpenAPI core and ballerina-to-openapi dependencies to build.gradle

--- a/openapi-service/modules/openapi-service-ls-extension/build.gradle
+++ b/openapi-service/modules/openapi-service-ls-extension/build.gradle
@@ -59,6 +59,9 @@ dependencies {
         exclude group: "javax.validation", module: "validation-api"
     }
     implementation "io.swagger.core.v3:swagger-models"
+
+    dist "io.ballerina.openapi:core:${openAPICoreVersion}"
+    dist "io.ballerina.openapi:ballerina-to-openapi:${ballerinaToOpenApiVersion}"
 }
 
 def balDistribution = file("$project.buildDir/extracted-distribution/jballerina-tools-${ballerinaLangVersion}")
